RESOLVED FIXED202792
A response body promise should be rejected in case of a failure happening after the HTTP response
https://bugs.webkit.org/show_bug.cgi?id=202792
Summary A response body promise should be rejected in case of a failure happening aft...
youenn fablet
Reported 2019-10-10 04:21:04 PDT
A response body promise should be rejected in case of a failure happening after the HTTP response
Attachments
Patch (5.83 KB, patch)
2019-10-10 04:23 PDT, youenn fablet
no flags
Patch (5.93 KB, patch)
2019-10-10 04:28 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2019-10-10 04:23:05 PDT
youenn fablet
Comment 2 2019-10-10 04:28:14 PDT
youenn fablet
Comment 3 2019-10-10 04:28:48 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/19618
youenn fablet
Comment 4 2019-10-13 12:12:22 PDT
Ping review?
WebKit Commit Bot
Comment 5 2019-10-14 15:14:19 PDT
Comment on attachment 380633 [details] Patch Clearing flags on attachment: 380633 Committed r251101: <https://trac.webkit.org/changeset/251101>
WebKit Commit Bot
Comment 6 2019-10-14 15:14:20 PDT
All reviewed patches have been landed. Closing bug.
Ling Ho
Comment 7 2019-10-15 15:24:31 PDT
Note You need to log in before you can comment on or make changes to this bug.