A response body promise should be rejected in case of a failure happening after the HTTP response https://bugs.webkit.org/show_bug.cgi?id=202792

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/fetch-error-worker.js: Added.
(doTest):
* web-platform-tests/service-workers/service-worker/fetch-error.https-expected.txt: Added.
* web-platform-tests/service-workers/service-worker/fetch-error.https.html: Added.

Source/WebCore:

Test: imported/w3c/web-platform-tests/service-workers/service-worker/fetch-error.https.html

* Modules/fetch/FetchResponse.cpp:
(WebCore::FetchResponse::BodyLoader::didFail):
Propagate error to fetch body consumer if any.


Canonical link: https://commits.webkit.org/216384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251101 268f45cc-cd09-0410-ab3c-d52691b4dbfc